--- a/app/templates/add.html
+++ b/app/templates/add.html
@@ -24,25 +24,6 @@
 
             <br>
 
-            {{ form.prix_solo.label }}
-            {{ form.prix_solo(class="form-control") }}
-            {{ form.nbr_place_solo.label }}
-            {{ form.nbr_place_solo(class="form-control") }}
-
-            <br>
-
-            {{ form.prix_duo.label }}
-            {{ form.prix_duo(class="form-control") }}
-            {{ form.nbr_place_duo.label }}
-            {{ form.nbr_place_duo(class="form-control") }}
-
-            <br>
-
-            {{ form.prix_family.label }}
-            {{ form.prix_family(class="form-control") }}
-            {{ form.nbr_place_family.label }}
-            {{ form.nbr_place_family(class="form-control") }}
-
             <br>
 
             {{ form.image.label }}
@@ -50,7 +31,7 @@
 
             <br>
 
-            {{ form.submit(class="form-control btn btn-primary") }}
+            {{ form.epreuve_submit(class="form-control btn btn-primary") }}
         </form>
     </div>
 </section>
